force-app/main/default/objects/Project__c/fields/CentroCusto__c.field-meta.xml
<CustomField>
    <fullName>CentroCusto__c</fullName>
    <description>Tipo de Centro de Custo para o Projeto.</description>
    <inlineHelpText>Tipo de Centro de Custo para o Projeto.</inlineHelpText>
    <label>Centro de Custo</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nefeles</fullName>
            </value>
            <value>
                <fullName>Customer &amp; Marketing</fullName>
            </value>
            <value>
                <fullName>Operate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>