force-app/main/default/objects/Project__c/fields/CodigoContratoSGC__c.field-meta.xml
<CustomField>
    <fullName>CodigoContratoSGC__c</fullName>
    <description>Código de Contrato SGC (Sistema de Gestão de Contratos)</description>
    <inlineHelpText>Código de Contrato SGC (Sistema de Gestão de Contratos)</inlineHelpText>
    <label>Código do Contrato (SGC)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>