force-app/main/default/objects/Project__c/fields/CodigoOportunidade__c.field-meta.xml
<CustomField>
    <fullName>CodigoOportunidade__c</fullName>
    <description>Código correspondente a Oportunidade ligada ao Projeto.</description>
    <inlineHelpText>Código correspondente a Oportunidade ligada ao Projeto.</inlineHelpText>
    <label>Código da Oportunidade</label>
    <length>20</length>
    <type>Text</type>
</CustomField>