force-app/main/default/objects/Project__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <description>Link to the Contract within the Contract Management System.</description>
    <inlineHelpText>Link to the Contract within the Contract Management System.</inlineHelpText>
    <label>Contract</label>
    <type>Url</type>
</CustomField>