force-app/main/default/objects/Project__c/fields/ContractCode__c.field-meta.xml
<CustomField>
    <fullName>ContractCode__c</fullName>
    <description>Contract Code CMS (Contract Management System)</description>
    <inlineHelpText>Contract Code CMS (Contract Management System)</inlineHelpText>
    <label>Contract code (CMS)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>