force-app/main/default/objects/Project__c/fields/ContractEndDate__c.field-meta.xml
<CustomField>
    <fullName>ContractEndDate__c</fullName>
    <description>End date of the Project Contract.</description>
    <inlineHelpText>End date of the Project Contract.</inlineHelpText>
    <label>Contract end date</label>
    <type>Date</type>
</CustomField>