force-app/main/default/objects/Project__c/fields/ContractStartDate__c.field-meta.xml
<CustomField>
    <fullName>ContractStartDate__c</fullName>
    <description>Project Contract start date.</description>
    <inlineHelpText>Project Contract start date.</inlineHelpText>
    <label>Contract start date</label>
    <type>Date</type>
</CustomField>