force-app/main/default/objects/Project__c/fields/Contrato__c.field-meta.xml
<CustomField>
    <fullName>Contrato__c</fullName>
    <description>Link para o Contrato dentro do Sistema de Gestão de Contratos.</description>
    <inlineHelpText>Link para o Contrato dentro do Sistema de Gestão de Contratos.</inlineHelpText>
    <label>Contrato</label>
    <type>Url</type>
</CustomField>