force-app/main/default/objects/Project__c/fields/CostCenter__c.field-meta.xml
<CustomField>
    <fullName>CostCenter__c</fullName>
    <description>Type of Cost Center for the Project.</description>
    <inlineHelpText>Type of Cost Center for the Project.</inlineHelpText>
    <label>Cost center</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nefeles</fullName>
            </value>
            <value>
                <fullName>Customer &amp; Marketing</fullName>
            </value>
            <value>
                <fullName>Operate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>