force-app/main/default/objects/Project__c/fields/DataFimContrato__c.field-meta.xml
<CustomField>
    <fullName>DataFimContrato__c</fullName>
    <description>Data do fim do Contrato do Projeto.</description>
    <inlineHelpText>Data do fim do Contrato do Projeto.</inlineHelpText>
    <label>Data do fim do Contrato</label>
    <type>Date</type>
</CustomField>