force-app/main/default/objects/Project__c/fields/DataFimParalisacao__c.field-meta.xml
<CustomField>
    <fullName>DataFimParalisacao__c</fullName>
    <description>Data a ser preenchida quando ocorrer o fim de uma paralisação de Projeto.</description>
    <inlineHelpText>Data a ser preenchida quando ocorrer o fim de uma paralisação de Projeto.</inlineHelpText>
    <label>Data de fim de Paralisação</label>
    <type>Date</type>
</CustomField>