force-app/main/default/objects/Project__c/fields/DataInicioContrato__c.field-meta.xml
<CustomField>
    <fullName>DataInicioContrato__c</fullName>
    <description>Data de início do Contrato do Projeto.</description>
    <inlineHelpText>Data de início do Contrato do Projeto.</inlineHelpText>
    <label>Data de início do Contrato</label>
    <type>Date</type>
</CustomField>