force-app/main/default/objects/Project__c/fields/DataParalisacao__c.field-meta.xml
<CustomField>
    <fullName>DataParalisacao__c</fullName>
    <description>Campo a ser preenchido caso o Projeto seja paralisado.</description>
    <inlineHelpText>Campo a ser preenchido caso o Projeto seja paralisado.</inlineHelpText>
    <label>Data de Paralisação</label>
    <type>Date</type>
</CustomField>