force-app/main/default/objects/Project__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>Data prevista para o fim do desenvolvimento do Projeto.</description>
    <inlineHelpText>Data prevista para o fim do desenvolvimento do Projeto.</inlineHelpText>
    <label>Data de Fim (Previsto)</label>
    <type>Date</type>
</CustomField>