force-app/main/default/objects/Project__c/fields/EndDateReal__c.field-meta.xml
<CustomField>
    <fullName>EndDateReal__c</fullName>
    <description>Effective end date of the project.</description>
    <inlineHelpText>Effective end date of the project.</inlineHelpText>
    <label>End date (Real)</label>
    <type>Date</type>
</CustomField>