force-app/main/default/objects/Project__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <description>Código usado no Billing, define o custo/investimento de um projeto.</description>
    <externalId>true</externalId>
    <inlineHelpText>Código usado no Billing, define o custo/investimento de um projeto.</inlineHelpText>
    <label>Engagement</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>