force-app/main/default/objects/Project__c/fields/FuncionalResponsavel__c.field-meta.xml
<CustomField>
    <fullName>FuncionalResponsavel__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Líder Funcional responsável pelo Projeto.</description>
    <inlineHelpText>Líder Funcional responsável pelo Projeto.</inlineHelpText>
    <label>Funcional Responsável</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Projetos (Funcional Responsável)</relationshipLabel>
    <relationshipName>Projetos3</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>