force-app/main/default/objects/Project__c/fields/Gerente_Respons_vel__c.field-meta.xml
<CustomField>
    <fullName>Gerente_Respons_vel__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Código do Gerente.</description>
    <label>Gerente Responsável</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Projetos</relationshipLabel>
    <relationshipName>Projetos</relationshipName>
    <type>Lookup</type>
</CustomField>