force-app/main/default/objects/Project__c/fields/GerenteSeniorResponsavel__c.field-meta.xml
<CustomField>
    <fullName>GerenteSeniorResponsavel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Gerente Sênior responsável pelo Projeto.</description>
    <inlineHelpText>Gerente Sênior responsável pelo Projeto.</inlineHelpText>
    <label>Gerente Sênior Responsável</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Projetos (Gerente Sênior Responsável)</relationshipLabel>
    <relationshipName>Projetos1</relationshipName>
    <type>Lookup</type>
</CustomField>