force-app/main/default/objects/Project__c/fields/OportunidadeAnexos__c.field-meta.xml
<CustomField>
    <fullName>OportunidadeAnexos__c</fullName>
    <description>Link para anexos a serem observados.</description>
    <inlineHelpText>Link para anexos a serem observados.</inlineHelpText>
    <label>Oportunidade &amp; Anexos</label>
    <type>Url</type>
</CustomField>