force-app/main/default/objects/Project__c/fields/OpportunityAttachments__c.field-meta.xml
<CustomField>
    <fullName>OpportunityAttachments__c</fullName>
    <description>Link to attachments to watch out for.</description>
    <inlineHelpText>Link to attachments to watch out for.</inlineHelpText>
    <label>Opportunity &amp; Attachments</label>
    <type>Url</type>
</CustomField>