force-app/main/default/objects/Project__c/fields/OpportunityCode__c.field-meta.xml
<CustomField>
    <fullName>OpportunityCode__c</fullName>
    <description>The code corresponds to the Opportunity linked to the Project.</description>
    <inlineHelpText>The code corresponds to the Opportunity linked to the Project.</inlineHelpText>
    <label>Opportunity Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>