force-app/main/default/objects/Project__c/fields/ProjectType__c.field-meta.xml
<CustomField>
    <fullName>ProjectType__c</fullName>
    <label>Tipo de Projeto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Implementação</fullName>
            </value>
            <value>
                <fullName>Extensão</fullName>
            </value>
            <value>
                <fullName>Suporte</fullName>
            </value>
            <value>
                <fullName>MPV</fullName>
            </value>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>Melhoria</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>