force-app/main/default/objects/Project__c/fields/ResponsibleFunctional__c.field-meta.xml
<CustomField>
    <fullName>ResponsibleFunctional__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Functional Leader responsible for the Project.</description>
    <inlineHelpText>The Functional Leader responsible for the Project.</inlineHelpText>
    <label>Responsible Functional</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Projects (Funcional Responsável)</relationshipLabel>
    <relationshipName>Projetos3</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>