force-app/main/default/objects/Project__c/fields/ResponsibleManager__c.field-meta.xml
<CustomField>
    <fullName>ResponsibleManager__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Project Manager Code.</description>
    <inlineHelpText>Project Manager Code.</inlineHelpText>
    <label>Responsible Manager</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Projects (Gerente Responsável)</relationshipLabel>
    <relationshipName>Projetos</relationshipName>
    <type>Lookup</type>
</CustomField>