force-app/main/default/objects/Project__c/fields/ResponsibleTechnician__c.field-meta.xml
<CustomField>
    <fullName>ResponsibleTechnician__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Technical Leader responsible for the Project.</description>
    <inlineHelpText>Technical Leader responsible for the Project.</inlineHelpText>
    <label>Responsible Technician</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Projects (Técnico Responsável)</relationshipLabel>
    <relationshipName>Projetos2</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>