force-app/main/default/objects/Project__c/fields/SeniorManagerResponsible__c.field-meta.xml
<CustomField>
    <fullName>SeniorManagerResponsible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Senior Manager responsible for the Project.</description>
    <inlineHelpText>Senior Manager responsible for the Project.</inlineHelpText>
    <label>Senior Manager Responsible</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Projects (Gerente Sênior Responsável)</relationshipLabel>
    <relationshipName>Projetos1</relationshipName>
    <type>Lookup</type>
</CustomField>