force-app/main/default/objects/Project__c/fields/SolutionAndFeature__c.field-meta.xml
<CustomField>
    <fullName>SolutionAndFeature__c</fullName>
    <label>Funcionalidades</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Omni-Channel</fullName>
            </value>
            <value>
                <fullName>Field Service</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>