force-app/main/default/objects/Project__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>Data que iniciou o desenvolvimento do Projeto.</description>
    <inlineHelpText>Data que iniciou o desenvolvimento do Projeto.</inlineHelpText>
    <label>Data de Início</label>
    <type>Date</type>
</CustomField>