force-app/main/default/objects/Project__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Previsto</fullName>
            </value>
            <value>
                <fullName>Não iniciado</fullName>
            </value>
            <value>
                <fullName>Em andamento</fullName>
            </value>
            <value>
                <fullName>Concluído</fullName>
            </value>
            <value>
                <fullName>Paralisado</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>Em desenvolvimento</fullName>
                <isActive>false</isActive>
                <label>Em desenvolvimento</label>
            </value>
            <value>
                <fullName>Entregue</fullName>
                <isActive>false</isActive>
                <label>Entregue</label>
            </value>
            <value>
                <fullName>Inativo</fullName>
                <isActive>false</isActive>
                <label>Inativo</label>
            </value>
            <value>
                <fullName>Proposta</fullName>
                <isActive>false</isActive>
                <label>Proposta</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>