force-app/main/default/objects/Project__c/fields/StoppageDate__c.field-meta.xml
<CustomField>
    <fullName>StoppageDate__c</fullName>
    <description>Field to be filled in if the Project is stopped.</description>
    <inlineHelpText>Field to be filled in if the Project is stopped.</inlineHelpText>
    <label>Stoppage date</label>
    <type>Date</type>
</CustomField>