force-app/main/default/objects/Project__c/fields/StoppageEndDate__c.field-meta.xml
<CustomField>
    <fullName>StoppageEndDate__c</fullName>
    <description>Date to be filled in when the end of a Project stoppage occurs.</description>
    <inlineHelpText>Date to be filled in when the end of a Project stoppage occurs.</inlineHelpText>
    <label>Stoppage end date</label>
    <type>Date</type>
</CustomField>