force-app/main/default/objects/Project__c/fields/TecnicoResponsavel__c.field-meta.xml
<CustomField>
    <fullName>TecnicoResponsavel__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Líder Técnico responsável pelo Projeto.</description>
    <inlineHelpText>Líder Técnico responsável pelo Projeto.</inlineHelpText>
    <label>Técnico Responsável</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Projetos (Técnico Responsável)</relationshipLabel>
    <relationshipName>Projetos2</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>