force-app/main/default/objects/Project__c/fields/TipoContrato__c.field-meta.xml
<CustomField>
    <fullName>TipoContrato__c</fullName>
    <description>Determina qual o tipo de Contrato do Projeto.</description>
    <inlineHelpText>Determina qual o tipo de Contrato do Projeto.</inlineHelpText>
    <label>Tipo de Contrato</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Time Material</fullName>
            </value>
            <value>
                <fullName>Escopo Fechado</fullName>
            </value>
            <value>
                <fullName>Squad</fullName>
            </value>
            <value>
                <fullName>Esteira Express</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>