force-app/main/default/objects/Project__c/fields/Total_de_Horas_PAF__c.field-meta.xml
<CustomField>
    <fullName>Total_de_Horas_PAF__c</fullName>
    <description>Quantidade total de horas do projeto.</description>
    <label>Total de Horas PAF</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>