force-app/main/default/objects/Project__c/fields/TotalAmountHoursPAF__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountHoursPAF__c</fullName>
    <description>The total amount of project hours.</description>
    <inlineHelpText>The total amount of project hours.</inlineHelpText>
    <label>Total amount of hours PAF</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>