force-app/main/default/objects/Project__c/fields/TypeContract__c.field-meta.xml
<CustomField>
    <fullName>TypeContract__c</fullName>
    <description>Determines which type of Project Contract.</description>
    <inlineHelpText>Determines which type of Project Contract.</inlineHelpText>
    <label>Type of contract</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Time Material</fullName>
            </value>
            <value>
                <fullName>Closed Scope</fullName>
            </value>
            <value>
                <fullName>Squad</fullName>
            </value>
            <value>
                <fullName>Delivery Pipeline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>