force-app/main/default/objects/Project__c/fields/TypeOfIndustry__c.field-meta.xml
<CustomField>
    <fullName>TypeOfIndustry__c</fullName>
    <description>Tipo de Industria envolvida no Projeto.</description>
    <inlineHelpText>Tipo de Industria envolvida no Projeto.</inlineHelpText>
    <label>Tipo de Indústria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Consumer Products</fullName>
            </value>
            <value>
                <fullName>Retail, Wholesale and Distribution</fullName>
            </value>
            <value>
                <fullName>Transportation, Hospitality and Services</fullName>
            </value>
            <value>
                <fullName>Industrial Products and Construction</fullName>
            </value>
            <value>
                <fullName>Power and Utilities</fullName>
            </value>
            <value>
                <fullName>Mining and Metals</fullName>
            </value>
            <value>
                <fullName>Oil, Gas and Chemicals</fullName>
            </value>
            <value>
                <fullName>Banking and Capital Markets</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Investment Management</fullName>
            </value>
            <value>
                <fullName>Life Sciences</fullName>
            </value>
            <value>
                <fullName>Health Care</fullName>
            </value>
            <value>
                <fullName>Civil Government</fullName>
            </value>
            <value>
                <fullName>International Donor Organizations</fullName>
            </value>
            <value>
                <fullName>Health and Social Care</fullName>
            </value>
            <value>
                <fullName>Defense, Security and Justice</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Media and Entertainment</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Consumer &amp; Industrial Products</fullName>
                <isActive>false</isActive>
                <label>Consumer &amp; Industrial Products</label>
            </value>
            <value>
                <fullName>Energy &amp; Resources</fullName>
                <isActive>false</isActive>
                <label>Energy &amp; Resources</label>
            </value>
            <value>
                <fullName>Financial Services</fullName>
                <isActive>false</isActive>
                <label>Financial Services</label>
            </value>
            <value>
                <fullName>Life Sciences &amp; Health Care</fullName>
                <isActive>false</isActive>
                <label>Life Sciences &amp; Health Care</label>
            </value>
            <value>
                <fullName>Public Sector</fullName>
                <isActive>false</isActive>
                <label>Public Sector</label>
            </value>
            <value>
                <fullName>Technology, Media &amp; Telecommunications</fullName>
                <isActive>false</isActive>
                <label>Technology, Media &amp; Telecommunications</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>