force-app/main/default/objects/Project__c/validationRules/Data_Real.validationRule-meta.xml
<ValidationRule>
    <fullName>Data_Real</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( Status__c , &quot;Inativo&quot;) || ISPICKVAL( Status__c , &quot;Entregue&quot;),
ISBLANK( Data_Fim_Real__c ))</errorConditionFormula>
    <errorDisplayField>Data_Fim_Real__c</errorDisplayField>
    <errorMessage>Inserir Data de Fim</errorMessage>
</ValidationRule>