force-app/main/default/objects/Project__c/validationRules/DataFinalParalisacaoAnteiorADataInicial.validationRule-meta.xml
<ValidationRule>
    <fullName>DataFinalParalisacaoAnteiorADataInicial</fullName>
    <active>true</active>
    <description>A  data de termino da Paralisação não pode ser anterior a data do início da Paralisação.</description>
    <errorConditionFormula>OR(
 YEAR(DataFimParalisacao__c)&lt; YEAR(DataParalisacao__c),
 AND(
  DAY(DataFimParalisacao__c) &lt; DAY(DataParalisacao__c) , 
  MONTH(DataFimParalisacao__c)= MONTH(DataParalisacao__c),
  YEAR(DataFimParalisacao__c)= YEAR(DataParalisacao__c)
 ),
 AND( 
  MONTH(DataFimParalisacao__c)&lt; MONTH(DataParalisacao__c),
  YEAR(DataFimParalisacao__c)= YEAR(DataParalisacao__c)
 )
)</errorConditionFormula>
    <errorDisplayField>DataFimParalisacao__c</errorDisplayField>
    <errorMessage>A  data de termino da Paralisação não pode ser anterior a data do início da Paralisação.</errorMessage>
</ValidationRule>