force-app/main/default/objects/Project__c/validationRules/DataFinalProjetoAnteiorADataInicial.validationRule-meta.xml
<ValidationRule>
    <fullName>DataFinalProjetoAnteiorADataInicial</fullName>
    <active>true</active>
    <description>A data de termino previsto ou termino real não pode ser menor que a data de início do Projeto.</description>
    <errorConditionFormula>OR(
 YEAR(EndDate__c)&lt; YEAR(StartDate__c),
 AND(
  DAY(EndDate__c) &lt; DAY(StartDate__c) , 
  MONTH(EndDate__c)= MONTH(StartDate__c),
  YEAR(EndDate__c)= YEAR(StartDate__c)
 ),
 AND( 
  MONTH(EndDate__c)&lt; MONTH(StartDate__c),
  YEAR(EndDate__c)= YEAR(StartDate__c)
 ),
 YEAR(Data_Fim_Real__c)&lt; YEAR(StartDate__c),
 AND(
  DAY(Data_Fim_Real__c) &lt; DAY(StartDate__c) , 
  MONTH(Data_Fim_Real__c)= MONTH(StartDate__c),
  YEAR(Data_Fim_Real__c)= YEAR(StartDate__c)
 ),
 AND( 
  MONTH(Data_Fim_Real__c)&lt; MONTH(StartDate__c),
  YEAR(Data_Fim_Real__c)= YEAR(StartDate__c)
 )
)</errorConditionFormula>
    <errorMessage>A data de termino do Projeto não pode ser anterior a data do início do Projeto.</errorMessage>
</ValidationRule>