force-app/main/default/objects/Project__c/validationRules/FinalDateStoppingPreviousTheInitialDate.validationRule-meta.xml
<ValidationRule>
    <fullName>FinalDateStoppingPreviousTheInitialDate</fullName>
    <active>true</active>
    <description>The end date of the Outage cannot be earlier than the start date of the Outage.</description>
    <errorConditionFormula>OR(
 YEAR(StoppageEndDate__c)&lt; YEAR(StoppageDate__c),
 AND(
  DAY(StoppageEndDate__c) &lt; DAY(StoppageDate__c) , 
  MONTH(StoppageEndDate__c)= MONTH(StoppageDate__c),
  YEAR(StoppageEndDate__c)= YEAR(StoppageDate__c)
 ),
 AND( 
  MONTH(StoppageEndDate__c)&lt; MONTH(StoppageDate__c),
  YEAR(StoppageEndDate__c)= YEAR(StoppageDate__c)
 )
)</errorConditionFormula>
    <errorDisplayField>StoppageEndDate__c</errorDisplayField>
    <errorMessage>The end date of the Outage cannot be earlier than the start date of the Outage.</errorMessage>
</ValidationRule>