force-app/main/default/objects/Project__c/validationRules/RealDate.validationRule-meta.xml
<ValidationRule>
    <fullName>RealDate</fullName>
    <active>true</active>
    <description>If the project status is inactive or delivered, the final (actual) date field must be filled in.</description>
    <errorConditionFormula>AND(ISPICKVAL( Status__c , &quot;Inativo&quot;) || ISPICKVAL( Status__c , &quot;Entregue&quot;),
ISBLANK( EndDateReal__c ))</errorConditionFormula>
    <errorDisplayField>EndDateReal__c</errorDisplayField>
    <errorMessage>Insert End Date</errorMessage>
</ValidationRule>