force-app/main/default/objects/Project__c/validationRules/ValidaFillingEngagement.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidaFillingEngagement</fullName>
    <active>true</active>
    <description>Every project must have an Engagement number.</description>
    <errorConditionFormula>ISBLANK( Engagement__c )</errorConditionFormula>
    <errorDisplayField>Engagement__c</errorDisplayField>
    <errorMessage>Please fill in the Engagement field.</errorMessage>
</ValidationRule>