force-app/main/default/objects/Project__c/validationRules/ValidaPreenchimentoEngagement.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidaPreenchimentoEngagement</fullName>
    <active>true</active>
    <description>Todo projeto deve possuir um número de Engagement.</description>
    <errorConditionFormula>ISBLANK( Engagement__c )</errorConditionFormula>
    <errorDisplayField>Engagement__c</errorDisplayField>
    <errorMessage>Favor preencher o campo Engagement.</errorMessage>
</ValidationRule>