force-app/main/default/objects/Project__c/listViews/Projetos.listView-meta.xml
<ListView>
    <fullName>Projetos</fullName>
    <columns>NAME</columns>
    <columns>Engagement__c</columns>
    <columns>Status__c</columns>
    <columns>ProjectType__c</columns>
    <columns>TypeOfIndustry__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>Projetos</label>
</ListView>